--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -201,19 +201,14 @@ input {
   text-align: center;
 }
 
-.hero-unit {
-  border: 1px solid #D5D5D5;
-}
-
-.new-cancellation-button {
-  margin: 0px auto;
-}
-
-
 #home_button_container {
   width: 45%;
   // text-align: center;
   margin: 0 auto;
+}
+
+#sign-in {
+  width: 50%;
 }
 
 .hero-unit {
