--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,7 +7,7 @@
     <%= link_to "Nofify an Absence", new_cancellation_path, class: "btn btn-primary new-cancellation-button"%>
     <%= link_to "Available Makeups", cancellations_path, class: "btn btn-info new-cancellation-button" %>
   <% else %>
-    <%= link_to "Sign in", signin_path, class: "btn btn-primary btn-block new-cancellation-button"%>
+    <%= link_to "Sign in", signin_path, class: "btn btn-primary", id: 'sign-in'%>
   <% end %>
   </div>
 </div>
