--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,9 @@
           <% if signed_in? %>
             <li><%= link_to "Notify an Absence", new_cancellation_path %></li>
             <li><%= link_to "Available Makeups", cancellations_path %></li>
-            <li><%= link_to "Users", "#" %></li>
+            <% if can? :manage, User %>
+              <li><%= link_to "Users", "#" %></li>
+            <% end %>
             <li id="fat-menu" class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                 Account <b class="caret"></b>
