--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
       <% end %>
       <%= yield %>
       <%= debug(params) if Rails.env.development? %>
+      <%= debug("Admin: #{@current_user.has_role? :admin}") if Rails.env.development? && signed_in? %>
       <%= render 'layouts/footer'%>
     </div>
   </body>
