added facebook oauth gem, migrated db to add uid provider and remove password digest

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -24,7 +24,7 @@
               </ul>
             </li>
           <% else %>
-            <li><%= link_to "Sign in", signin_path %></li>
+            <li><%= link_to "Sign in", "/auth/facebook" %></li>
           <% end %>
         </ul>
       </nav>
