--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,10 +1,10 @@
 <%# provide :title, 'Home' %>
 <div class="center hero-unit">
   <h1>Makeup Scheduler</h1>
-  <p>This application helps to manage lessons cancellations</p>
+  <p>This application was designed to help you manage lesson cancellations</p>
   <div id="home_button_container">
   <% if signed_in?%>
-    <%= link_to "Nofify an Absence", new_cancellation_path, class: "btn btn-primary new-cancellation-button"%>
+    <%= link_to "Absence Notification", new_cancellation_path, class: "btn btn-primary new-cancellation-button"%>
     <%= link_to "Available Makeups", cancellations_path, class: "btn btn-info new-cancellation-button" %>
   <% else %>
     <div id='sign-in-button'>
