--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,7 @@
       <nav>
         <ul class="nav pull-right">
           <% if signed_in? %>
-            <li><%= link_to "Notify an Absence", new_cancellation_path %></li>
+            <li><%= link_to "Absence Notification", new_cancellation_path %></li>
             <li><%= link_to "Available Makeups", cancellations_path %></li>
             <% if can? :manage, User %>
               <li><%= link_to "Users", "#" %></li>
