added school title to home page

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,6 @@
 <%# provide :title, 'Home' %>
 <div class="center hero-unit">
-  <h1>Makeup Scheduler</h1>
+  <h2>Bucktown Music<br/>Makeup Scheduler</h2>
   <p>This application was designed to help you manage lesson cancellations</p>
   <div id="home_button_container">
   <% if signed_in?%>
