--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the StaticPages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.center.hero-unit {
+  h2 {
+    color: black;
+    font-weight: bold;
+    font-family: sans-serif;
+    font-size: 2.5em;
+  }
+}
