--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,33 +1,40 @@
-<header class="navbar navbar-fixed-top navbar-inverse">
-  <div class="navbar-inner">
-    <div class="container">
-      <%= link_to "Makeup Scheduler", root_path, id: "logo" %>
-      <nav>
-        <ul class="nav pull-right">
-          <% if signed_in? %>
-            <li><%= link_to "Absence Notification", new_cancellation_path %></li>
-            <li><%= link_to "Available Makeups", cancellations_path %></li>
-            <% if can? :manage, User %>
-              <li><%= link_to "Users", "#" %></li>
-            <% end %>
-            <li id="fat-menu" class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                <%= current_user.name%> <b class="caret"></b>
-              </a>
-              <ul class="dropdown-menu">
-                <li><%= link_to "Profile", current_user %></li>
-                <li><%= link_to "Settings", "#" %></li>
-                <li class="divider"></li>
-                <li>
-                  <%= link_to "Logout", logout_path, method: "delete" %>
-                </li>
-              </ul>
-            </li>
-          <% else %>
-            <li><%= link_to "Sign in", "/auth/facebook" %></li>
-          <% end %>
-        </ul>
-      </nav>
+<nav class="navbar navbar-default navbar-fixed-top navbar-inverse" role="navigation">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand hidden-md hidden-lg hidden-sm" id="brand" href="#">M</a> -->
     </div>
-  </div>
-</header>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <%= link_to "Makeup Scheduler", root_path, class: "navbar-text", id: "logo"%>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <% if signed_in? %>
+          <li><%= link_to "Absence Notification", new_cancellation_path %></li>
+          <li><%= link_to "Available Makeups", cancellations_path %></li>
+          <% if can? :manage, User %>
+            <li><%= link_to "Users", "#" %></li>
+          <% end %>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><%= current_user.name%> <span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li><%= link_to "Profile", current_user %></li>
+              <li class="divider"></li>
+              <li><a href="#"><%= link_to "Logout", logout_path, method: "delete" %></a></li>
+            </ul>
+          </li>
+        <% else %>
+          <li><%= link_to "Sign in", "/auth/facebook" %></li>
+        <% end %>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
