responsive cancellations new form

--- a/app/views/cancellations/new.html.erb
+++ b/app/views/cancellations/new.html.erb
@@ -2,7 +2,7 @@
 
 
 <div class="row">
-  <div class="span6 offset3">
+  <div class="col-sm-6 col-sm-offset-3">
     <h2> Notify an absence </h2>
 
     <%= form_for(@cancellation) do |f| %>
@@ -32,4 +32,4 @@
   </div>
 </div>
 
-<%= javascript_include_tag "cancellations_new" %>
+<%#= javascript_include_tag "cancellations_new" %>
