--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -206,9 +206,9 @@ input {
 /* Cancellation index and show */
 
 .makeup { 
-  border: 1px solid #acacac;
-  border-radius: 7px;
-  background-color: #f5f5f5;
+  // border: 1px solid #acacac;
+  // border-radius: 7px;
+  // background-color: #f5f5f5;
   padding: 15px 0 8px;
   margin-bottom: 15px;
   text-align: center;
