--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -2,7 +2,10 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.center.hero-unit {
+#home-jumbotron {
+  text-align: center;
+  border: 1px solid #D5D5D5;
+
   h2 {
     color: black;
     font-weight: bold;
