--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,15 +1,15 @@
-<%# provide :title, 'Home' %>
-<div class="center hero-unit">
+
+<div class="jumbotron" id="home-jumbotron">
   <h2>Bucktown Music<br/>Makeup Scheduler</h2>
   <p>This application was designed to help you manage lesson cancellations</p>
-  <div id="home_button_container">
-  <% if signed_in?%>
-    <%= link_to "Absence Notification", new_cancellation_path, class: "btn btn-primary new-cancellation-button"%>
-    <%= link_to "Available Makeups", cancellations_path, class: "btn btn-info new-cancellation-button" %>
-  <% else %>
-    <div id='sign-in-button'>
-      <%= link_to "", "/auth/facebook", class: 'inner'%>
+    <div id="home_button_container">
+      <% if signed_in?%>
+        <%= link_to "Absence Notification", new_cancellation_path, class: "btn btn-primary new-cancellation-button"%>
+        <%= link_to "Available Makeups", cancellations_path, class: "btn btn-info new-cancellation-button" %>
+      <% else %>
+        <div id='sign-in-button'>
+          <%= link_to "", "/auth/facebook", class: 'inner'%>
+        </div>
+      <% end %>
     </div>
-  <% end %>
-  </div>
 </div>
