added image to nav bar

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,8 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand hidden-md hidden-lg hidden-sm" id="brand" href="#">M</a> -->
+      <!-- <a class="navbar-brand hidden-md hidden-lg hidden-sm" id="brand" href="#">M</a> -->
+      <%= image_tag "bucktown_music_brand.png", class: "nav-brand hidden-sm hidden-md hidden-lg", id: "brand-logo" %>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
