--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <% provide :title, @user.name %>
 
-<div class="row">
-  <aside class="span4">
+<div class="row ">
+  <aside class="col-sm-col-4 hidden-xs">
     <section></section>
       <h1>
         <%= gravatar_for @user %>
@@ -15,34 +15,20 @@
 
   <h3 class="center">Absences and Makeups</h3>
 
-  <div class="center span5 offset2 table_container">
+  <div class="col-sm-6 col-sm-offset-3 table_container">
     <table class="table table-striped table-hover table-bordered">
       <tr>
         <th>n.</th>
         <th>Absence</th>
+        <th>Makeup</th>
       </tr>
       <% @user.created_cancellations.each_with_index do |created, index|%>  
           <tr>
             <td><b><%= "#{index + 1}"%></b></td>
             <td><%= "#{created.get_date} #{created.get_time}"%></td>
+            <td><%= taken_time(@user, index)%></td>
           </tr>
       <% end %>
-
     </table>
   </div>
-
-  <div class="center span3 table_container">
-    <table class="table table-striped table-hover table-bordered">
-      <tr>
-        <th>Makeup</th>
-      </tr>
-      <% @user.taken_cancellations.each do |taken|%>  
-        <tr>
-          <td><%= "#{taken.get_date} #{taken.get_time}"%></td>
-        </tr>
-      <% end %>
-
-    </table>
-  </div>
-
 <% end %>
