added responsive classes to other pages

--- a/app/views/cancellations/index.html.erb
+++ b/app/views/cancellations/index.html.erb
@@ -2,7 +2,7 @@
 <%= stylesheet_link_tag "event_calendar" %>
 <%= javascript_include_tag "event_calendar" %>
 
-<div class="span12 offset0">
+<div class="col-xs-12">
   <h2>Available Makeups</h2>
     <%= raw(event_calendar) %>
 </div>
