--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,7 +3,7 @@
 <h1>Sign up</h1>
 
 <div class="row">
-  <div class="span6 offset3">
+  <div class="col-sm-6 col-sm-offset-3">
 
     <%= form_for(@user) do |f| %>
 
