--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,9 @@
 </head>
   <body>
     <%= render 'layouts/header' %>
-    <div class="container">
+    <div class="container-fluid">
       <% flash.each do |key, value| %>
-        <%= content_tag(:div, value, class: "alert alert-#{key}") %>
+        <%= content_tag(:div, value, class: "bg-#{key}") %>
       <% end %>
       <%= yield %>
       <%= debug(params) if Rails.env.development? %>
