bootstrap new form

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -158,17 +158,9 @@ aside {
 
 /* forms */
 
-input, area, select, .uneditable-input {
-  border: 1px solid #bbb;
+#new-button {
   width: 100%;
-  margin-bottom: 15px;
-  @include box_sizing;
 }
-
-input {
-  height: auto !important;
-}
-
 #error_explanation {
   color: #f00;
   ul {
