resized home page for small devices

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,5 @@
 <!-- <div class="row"> -->
-  <div class="col-lg-6 col-lg-offset-3">
+  <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
     <div class="jumbotron" id="home-jumbotron">
       <h2>Bucktown Music<br/>Makeup Scheduler<br>
       <small>This application was designed to help you manage lesson cancellations</small></h2>
