updates canc. new form responsiveness

--- a/app/views/cancellations/new.html.erb
+++ b/app/views/cancellations/new.html.erb
@@ -2,7 +2,7 @@
 
 
 <div class="row">
-  <div class="col-sm-4 col-sm-offset-4">
+  <div class="col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
     <h1> Notify an absence </h1>
 
     <%= form_for @cancellation, html: { role: 'form' } do |f| %>
