--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,12 @@
   <body>
     <%= render 'layouts/header' %>
     <div class="container-fluid">
+
+    <div class="col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
       <% flash.each do |key, value| %>
-        <%= content_tag(:div, value, class: "bg-#{key}") %>
+        <%= content_tag(:div, value, class: "alert alert-#{key}") %>
       <% end %>
+    </div>
       <%= yield %>
       <%= debug(params) if Rails.env.development? %>
       <%= debug("Admin: #{@current_user.has_role? :admin}") if Rails.env.development? && signed_in? %>
