--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,11 +19,9 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <% if signed_in? %>
-          <li><%= link_to "Absence Notification", new_cancellation_path %></li>
+          <%= render "layouts/admin_menu"  %>
+          <li><%= link_to "Absence Notification", cancellations_new_path %></li>
           <li><%= link_to "Available Makeups", cancellations_path %></li>
-          <% if can? :manage, User %>
-            <li><%= link_to "Users", "#" %></li>
-          <% end %>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><%= current_user.name%> <span class="caret"></span></a>
             <ul class="dropdown-menu" role="menu">
