--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,7 +5,7 @@
       <small>This application was designed to help you manage lesson cancellations</small></h2>
         <div id="home-button-container">
           <% if signed_in?%>
-            <%= link_to "Absence Notification", new_cancellation_path, class: "btn btn-primary new-cancellation-button"%>
+            <%= link_to "Absence Notification", cancellations_new_path, class: "btn btn-primary new-cancellation-button"%>
             <%= link_to "Available Makeups", cancellations_path, class: "btn btn-info new-cancellation-button" %>
           <% else %>
             <div id='sign-in-button'>
