added admin users and user page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,8 +4,9 @@
   <aside class="col-sm-col-4 hidden-xs">
     <section></section>
       <h1>
-        <%= gravatar_for @user %>
+        <%#= gravatar_for @user %>
         <%= @user.name %> 
+        asdf
       </h1>
     </section>
   </aside>
