--- a/app/views/layouts/_admin_menu.html.erb
+++ b/app/views/layouts/_admin_menu.html.erb
@@ -1,8 +1,8 @@
  <% if current_user.has_role? :admin %>
   <li class="dropdown">
-    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Admin Section <span class="caret"></span></a>
+    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Admin Section<span class="caret"></span></a>
     <ul class="dropdown-menu" role="menu">
-      <li><%= link_to "All Users", "#" %></li>
+      <li><%= link_to "All Users", admin_users_path %></li>
       <li><%= link_to "Notification on behalf of a student", "#" %></li>
       <li><%= link_to "Admin Calendar", "#" %></li>
     </ul>
