commented out some tests

--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, 'All users') %>
 <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
   <h1>All Users</h1>
-  <ul>
+  <ul class="all-users">
     <%= render @users %>
   </ul>
 </div>
