--- a/app/views/cancellations/new.html.erb
+++ b/app/views/cancellations/new.html.erb
@@ -1,9 +1,9 @@
-<%= provide(:title, "Notify an absence")%>
+<%= provide(:title, "Absence Notification")%>
 
 
 <div class="row">
   <div class="col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
-    <h1> Notify an absence </h1>
+    <h1> Absence Notification </h1>
 
     <%= form_for @cancellation, html: { role: 'form' } do |f| %>
 
