added admin calendar and admin cancellation edit views

--- a/app/views/admin/cancellations/edit.html.erb
+++ b/app/views/admin/cancellations/edit.html.erb
@@ -1,2 +1,21 @@
-<h1>Admin::Cancellations#edit</h1>
-<p>Find me in app/views/admin/cancellations/edit.html.erb</p>
+<%= provide(:title, "Edit Cancellation")%>
+
+<div class="row">
+  <div class="col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4 col-lg-2 col-lg-offset-5">
+    <h1>Edit Cancellation</h1>
+      <%= form_for @cancellation, html: { role: 'form' } do |f| %>
+
+        <%= render 'shared/error_messages' %>
+
+        <div class="form-group">
+          <%= f.label :instrument, "New Instrument" %>
+          <%= f.text_field :instrument, class: 'form-control' %>
+        </div>
+
+        <br><br>
+
+        <%= f.submit "Send", class: "btn btn-primary new-button", id: "new"%>
+      <% end %>
+      <%= link_to "delete cancellation", @cancellation, method: :delete, data: { confirm: "Are you sure?"}, id: "delete-link" %>
+  </div>
+</div>
