--- a/app/views/cancellations/new.html.erb
+++ b/app/views/cancellations/new.html.erb
@@ -32,11 +32,9 @@
             <%= text_field_tag :school_code, nil, class: 'form-control' %>
         </div>
     
-    <%= f.submit "Send", class: "btn btn-primary", id: "new-button"%>
+    <%= f.submit "Send", class: "btn btn-primary new-button" %>
 
 
     <% end %>
   </div>
 </div>
-
-<%#= javascript_include_tag "cancellations_new" %>
