--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -151,7 +151,7 @@ aside {
 
 /* forms */
 
-#new-button {
+.new-button {
   width: 100%;
 }
 #error_explanation {
@@ -211,6 +211,9 @@ aside {
   p {
     margin-bottom: 0;
   }
+  a { 
+    margin-top: 10px;
+  }
 }
 
 .center {
@@ -238,6 +241,8 @@ aside {
     }
   }
 }
+
+#delete-link {}
 
 /* Small devices (tablets, 768px and up) */
 @media screen and (max-width: 768px) {
