--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -151,9 +151,11 @@ aside {
 
 /* forms */
 
-.new-button {
+.edit-btn {
   width: 100%;
+  margin-top: 10px;
 }
+
 #error_explanation {
   color: #f00;
   ul {
