updated users template and styling

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -244,7 +244,9 @@ aside {
   }
 }
 
-#delete-link {}
+.user-link {
+  font-weight: bold;
+}
 
 /* Small devices (tablets, 768px and up) */
 @media screen and (max-width: 768px) {
