--- a/app/views/admin/users/_user.html.erb
+++ b/app/views/admin/users/_user.html.erb
@@ -1,8 +1,7 @@
 <li>
-  <%#= gravatar_for user, size: 52 %>
-  <%= link_to user.name, user %>
+  <%= link_to user.name, user, class: "user-link" %>
   <% if current_user.has_role?(:admin) && !current_user?(user) %>
     | <%= link_to "delete", admin_user_path(user), method: :delete,
-                                  data: { confirm: "You sure?" } %>
+            data: { confirm: "You sure?" }, class: "text-danger" %>
   <% end %>
 </li>
