--- a/app/views/layouts/_admin_menu.html.erb
+++ b/app/views/layouts/_admin_menu.html.erb
@@ -3,7 +3,7 @@
     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Admin Section<span class="caret"></span></a>
     <ul class="dropdown-menu" role="menu">
       <li><%= link_to "All Users", admin_users_path %></li>
-      <li><%= link_to "Notification on behalf of a student", "#" %></li>
+      <li><%= link_to "Notification on behalf of a student", new_admin_cancellation_path %></li>
       <li><%= link_to "Admin Calendar", admin_cancellations_path %></li>
     </ul>
   </li>
