--- a/app/views/admin/cancellations/edit.html.erb
+++ b/app/views/admin/cancellations/edit.html.erb
@@ -3,7 +3,12 @@
 <div class="row">
   <div class="col-xs-12 col-sm-4 col-sm-offset-4 col-lg-2 col-lg-offset-5">
     <h1>Edit / Delete Cancellation</h1>
-      <%= form_for @cancellation, html: { role: 'form' } do |f| %>
+      <%= form_for [:admin, @cancellation], html: { role: 'form' } do |f| %>
+
+        <p><b>Name: </b><%= @cancellation.name %></p>
+
+    <p><b>Time: </b><%= @cancellation.get_time %></p>
+    <p><b>Date: </b><%= @cancellation.get_date %></p>
 
         <%= render 'shared/error_messages' %>
 
@@ -14,6 +19,6 @@
 
         <%= f.submit "Send", class: "btn btn-primary edit-btn", id: "new"%>
       <% end %>
-      <%= link_to "delete cancellation", @cancellation, method: :delete, data: { confirm: "Are you sure?"}, class: "btn btn-danger edit-btn"%>
+      <%= link_to "delete cancellation", admin_cancellation_path, method: :delete, data: { confirm: "Are you sure?"}, class: "btn btn-danger edit-btn"%>
   </div>
 </div>
