--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -203,7 +203,7 @@ aside {
   // background-color: #f5f5f5;
   padding: 15px 0 8px;
   margin-bottom: 15px;
-  text-align: center;
+  // text-align: center;
 
   h4 {
     margin: 0;
