--- a/app/views/cancellations/show.html.erb
+++ b/app/views/cancellations/show.html.erb
@@ -1,11 +1,13 @@
 <% provide(:title, "#{@cancellation.instrument} #{@cancellation.start_at.strftime("%m-%d-%y")}")%>
 
-<div class="col-sm-6 col-sm-offset-3">
-  <% if params[:action] == "show"%>
-    <h2>Thank you for notifying us your absence!</h2>
-  <% end %>
+<h1>Thank you for notifying us your absence!</h1>
+<div class="row">
+  <div class="col-xs-12 col-sm-4 col-sm-offset-4 col-lg-2 col-lg-offset-5">
+  <%# if params[:action] == "show"%>
+  <%# end %>
   
   <%= render "cancellation"%>
+  </div>
 </div>
 
 <%= javascript_include_tag "cancellations" %>
