update cancellation template

--- a/app/views/cancellations/_cancellation.html.erb
+++ b/app/views/cancellations/_cancellation.html.erb
@@ -1,7 +1,7 @@
   <% if  current_user.has_role?(:admin) %>
     <p><b>Name: </b><%= @cancellation.name %></p>
   <% end %>
-  <% if current_user.has_role?(:admin) && @cancellation.taker.try(:name) %>
+  <% if current_user.has_role?(:admin) && @cancellation.taker %>
     <p><b>Makeup: </b><%= @cancellation.taker.name %></p>
   <% end %>
   <p><b>Instrument: </b><%= @cancellation.instrument.capitalize %></p>
