--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -197,30 +197,26 @@ aside {
 
 /* Cancellation index and show */
 
-.makeup { 
+// .makeup { 
   // border: 1px solid #acacac;
   // border-radius: 7px;
   // background-color: #f5f5f5;
-  padding: 15px 0 8px;
-  margin-bottom: 15px;
+  // padding: 15px 0 8px;
+  // margin-bottom: 15px;
   // text-align: center;
 
-  h4 {
-    margin: 0;
-    padding-bottom: 8px;
-  }
+  // h4 {
+    // margin: 0;
+    // padding-bottom: 8px;
+  // }
 
-  p {
-    margin-bottom: 0;
-  }
-  a { 
-    margin-top: 10px;
-  }
-}
-
-.center {
-  text-align: center;
-}
+  // p {
+    // margin-bottom: 0;
+  // }
+  // a { 
+    // margin-top: 10px;
+  // }
+// }
 
 #home_button_container {
   // width: 45%;
@@ -252,5 +248,11 @@ aside {
 @media screen and (max-width: 768px) {
   #logo {
     padding-left: 15px;
+  }
+
+}
+@media screen and (max-width: 1200px) {
+  .cancellation {
+    text-align: center;
   }
 }
