--- a/app/views/cancellations/_cancellation.html.erb
+++ b/app/views/cancellations/_cancellation.html.erb
@@ -1,9 +1,9 @@
   <% if  current_user.has_role?(:admin) %>
-    <p><b>Name: </b><%= @cancellation.name %></p>
+    <h4><b>Name: </b><%= @cancellation.name %></h4>
   <% end %>
   <% if current_user.has_role?(:admin) && @cancellation.taker %>
-    <p><b>Makeup: </b><%= @cancellation.taker.name %></p>
+    <h4><b>Makeup: </b><%= @cancellation.taker.name %></h4>
   <% end %>
-  <p><b>Instrument: </b><%= @cancellation.instrument.capitalize %></p>
-  <p><b>Date: </b><%= @cancellation.get_date %></p>
-  <p><b>Time: </b><%= @cancellation.get_time %></p>
+  <h4><b>Instrument: </b><%= @cancellation.instrument.capitalize %></h4>
+  <h4><b>Date: </b><%= @cancellation.get_date %></p>
+  <h4><b>Time: </b><%= @cancellation.get_time %></h4>
