--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -158,10 +158,9 @@ aside {
 
 #error_explanation {
   color: #f00;
-  ul {
-    list-style: none;
-    margin: 0 0 18px 0;
-  }
+  // ul {
+    // list-style: none;
+  // }
 }
 
 .field_with_errors {
