--- a/app/views/admin/cancellations/edit.html.erb
+++ b/app/views/admin/cancellations/edit.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Edit / Delete Cancellation</h1>
 <div class="row">
-  <div class="col-xs-12 col-sm-4 col-sm-offset-4 col-lg-2 col-lg-offset-5">
+  <div class="col-xs-12 col-sm-4 col-sm-offset-4 col-lg-2 col-lg-offset-5 cancellation">
       <%= render "cancellations/cancellation" %>
       <%= form_for [:admin, @cancellation], html: { role: 'form' } do |f| %>
 
