--- a/app/views/admin/cancellations/edit.html.erb
+++ b/app/views/admin/cancellations/edit.html.erb
@@ -1,20 +1,12 @@
 <%= provide(:title, "Edit Cancellation")%>
 
-<h1>Edit / Delete Cancellation</h1>
 <div class="row">
-  <div class="col-xs-12 col-sm-4 col-sm-offset-4 col-lg-2 col-lg-offset-5 cancellation">
+  <div class="col-xs-12 col-sm-4 col-sm-offset-4 col-lg-2 col-lg-offset-5">
+      <h1>Edit / Delete Cancellation</h1>
+
       <%= render "cancellations/cancellation" %>
-      <%= form_for [:admin, @cancellation], html: { role: 'form' } do |f| %>
 
-        <%= render 'shared/error_messages' %>
-
-        <div class="form-group">
-          <%= f.label :instrument, "New Instrument" %>
-          <%= f.text_field :instrument, class: 'form-control' %>
-        </div>
-
-        <%= f.submit "Send", class: "btn btn-primary edit-btn", id: "new"%>
-      <% end %>
-      <%= link_to "delete cancellation", admin_cancellation_path, method: :delete, data: { confirm: "Are you sure?"}, class: "btn btn-danger edit-btn"%>
+      <%= render "admin_cancellation" %>
+      
   </div>
 </div>
