--- a/app/views/cancellations/index.html.erb
+++ b/app/views/cancellations/index.html.erb
@@ -3,6 +3,6 @@
 <%= javascript_include_tag "event_calendar" %>
 
 <div class="col-lg-10 col-lg-offset-1">
-  <h1>Available Makeups</h1>
+  <h1 id="calendar-page">Available Makeups</h1>
     <%= raw(event_calendar) %>
 </div>
