--- a/app/views/admin/cancellations/index.html.erb
+++ b/app/views/admin/cancellations/index.html.erb
@@ -2,7 +2,7 @@
 <%= stylesheet_link_tag "event_calendar" %>
 <%= javascript_include_tag "event_calendar" %>
 
-<div class="col-lg-10 col-lg-offset-1">
-  <h1 id="admin-calendar-page">Admin Calendar</h1>
+<div id="admin-calendar-page" class="col-lg-10 col-lg-offset-1">
+  <h1>Admin Calendar</h1>
     <%= raw(admin_event_calendar) %>
 </div>
