--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,8 +10,12 @@
  *
  *= require_self
  *= require_tree .
+ *
+ *= require jquery-ui/datepicker
+ *
  */
 
  /* "bootstrap-sprockets" must be imported before "bootstrap" and "bootstrap/variables"*/
+
 @import "bootstrap-sprockets";
 @import "bootstrap";
