edited class name

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -156,7 +156,7 @@ aside {
   margin-top: 10px;
 }
 
-#error_explanation {
+.error-explanation {
   color: #f00;
   // ul {
     // list-style: none;
