--- a/app/views/shared/_user_error_messages.html.erb
+++ b/app/views/shared/_user_error_messages.html.erb
@@ -1,5 +1,5 @@
 <% if @user.errors.any? %>
-  <div id="error_explanation">
+  <div class="error-explanation">
     <div class="alert alert-error">
       The form contains <%= pluralize(@user.errors.count, "error") %>.
     </div>
