moved styling to user.css.scss

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <% provide :title, @user.name %>
 
 <div class="row ">
-  <aside class="col-sm-col-4 hidden-xs">
+  <aside class="col-sm-col-4 ">
     <section></section>
       <h1>
         <%#= gravatar_for @user %>
